@@ -436,6 +436,11 @@ If you set `allowMultiFetch` to `true` you must process all the retrieved record
 
 Messages emitted by this adapter contain a header `kafka_remainingRecords` with a count of records remaining from the previous poll.
 
+Starting with version `6.2`, the `KafkaMessageSource` supports an `ErrorHandlingDeserializer` provided in the consumer properties.
+A `DeserializationException` is extracted from record headers and thrown to the called.
+With a `SourcePollingChannelAdapter` this exception is wrapped into an `ErrorMessage` and published to its `errorChannel`.
+See https://docs.spring.io/spring-kafka/reference/html/#error-handling-deserializer[`ErrorHandlingDeserializer`] documentation for more information.
+
 [[kafka-outbound-gateway]]
 === Outbound Gateway
 
@@ -448,7 +453,7 @@ It is suggested that you add a `ConsumerRebalanceListener` to the template's rep
 
 The `KafkaProducerMessageHandler` `sendTimeoutExpression` default is `delivery.timeout.ms` Kafka producer property `+ 5000` so that the actual Kafka error after a timeout is propagated to the application, instead of a timeout generated by this framework.
 This has been changed for consistency because you may get unexpected behavior (Spring may time out the `send()`, while it is actually, eventually, successful).
-IMPORTANT: That timeout is 120 seconds by default so you may wish to reduce it to get more timely failures.
+IMPORTANT: That timeout is 120 seconds by default, so you may wish to reduce it to get more timely failures.
 
 [[kafka-outbound-gateway-configuration]]
 ==== Configuration
